--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,22 @@
     </div>
   </div>
 </div>
+
+<% if user_signed_in? %>
+  <div class="center">
+    <div class="main-nav" style="clear: both;">
+      <ul>
+        <li class="active"><a href="/">Central</a></li>
+        <li class="last"><a href="#">My-account</a></li>
+      </ul>
+    </div>
+  </div>
+<% end %>
+
 <div class="center">
   <%= yield %>
 </div>
+
 <div id="footer">
   <div class="center">
     <p class="copy_right">© 2014. All Rights reserved.</p>
