--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2519,7 +2519,7 @@ html, body {
 .checkbox { float:right;}
 .checkbox p { float:left; margin:-1px 0 0 6px;}
 .check-box { float:left; margin:0px;}
-.btn-primary {
+.btn-primary-yellow {
     background-color: #ffc700;
     border: 1px solid #E5B302;
     color: #000;
@@ -2542,3 +2542,12 @@ p.copy_right { float:left;color:#fff; font-size:12px;}
 #footer ul li { float:left; margin:0 0 0 7px; color:#fff;}
 #footer ul li a { color:#fff; font-size:12px;}
 #footer ul li a:hover { color:#ffc700;}
+
+
+p#notice {
+    color: green;
+    /* line-height: 18px; */
+    text-align: center;
+    margin: 10px 0 0 10px;
+    background: #ccffcc;
+}
