alert also added for flash

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
 </div>
 
 <div class="center">
-  <p id="notice"><%= notice %></p>
+  <p id="notice"><%= notice || alert %></p>
   <% if user_signed_in? %>
       <!--<div class="main-nav" style="clear: both;">-->
         <!--<ul>-->
