added association for the users and teams

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -28,6 +28,9 @@
         <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+
+    <%# will_paginate @teams %>
+
   </tbody>
 </table>
 
