--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2097,6 +2097,7 @@ input[type="submit"].btn.btn-mini {
 }
 .pagination {
     margin: 20px 0;
+    float: right;
 }
 .pagination ul {
     display: inline-block;
