--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -2,38 +2,40 @@
 
 <table class="table table-striped table-responsive">
   <thead>
-    <tr>
-      <th>Livery</th>
-      <th>Name</th>
-      <th>Constructor</th>
-      <th>Podiums</th>
-      <th>Driver1</th>
-      <th>Driver2</th>
-      <th>Titles</th>
-      <th colspan="2" style="text-align: center">Actions</th>
-    </tr>
+  <tr>
+    <th>Livery</th>
+    <th>Name</th>
+    <th>Constructor</th>
+    <th>Podiums</th>
+    <th>Driver1</th>
+    <th>Driver2</th>
+    <th>Titles</th>
+    <th colspan="2" style="text-align: center">Actions</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @teams.each do |team| %>
-      <tr class="active">
-        <td><%= image_tag(team.livery_url(:small)) %></td>
-        <td><%= link_to team.name.titleize, team %></td>
-        <td><%= team.constructor %></td>
-        <td><%= team.podiums %></td>
-        <td><%= team.driver1 %></td>
-        <td><%= team.driver2 %></td>
-        <td><%= team.titles %></td>
-        <td><%= link_to 'Edit', edit_team_path(team) %></td>
-        <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <% if @teams.empty? %>
+      <tr>
+        <td colspan="9">There's no records to display, to create a new team click the link below!</td>
       </tr>
-    <% end %>
-
-    <%# will_paginate @teams %>
-
+  <% else %>
+      <% @teams.each do |team| %>
+          <tr>
+            <td><%= image_tag(team.livery_url(:small)) %></td>
+            <td><%= link_to team.name.titleize, team %></td>
+            <td><%= team.constructor %></td>
+            <td><%= team.podiums %></td>
+            <td><%= team.driver1 %></td>
+            <td><%= team.driver2 %></td>
+            <td><%= team.titles %></td>
+            <td><%= link_to 'Edit', edit_team_path(team) %></td>
+            <td><%= link_to 'Destroy', team, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+          </tr>
+      <% end %>
+  <% end %>
   </tbody>
 </table>
-
+<%= will_paginate @teams %>
 <br>
-
 <%= link_to 'New Team', new_team_path %>
