--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@team, html: {class: 'form-horizontal'}) do |f| %>
   <% if @team.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="alert-error">
       <h2><%= pluralize(@team.errors.count, "error") %> prohibited this team from being saved:</h2>
 
       <ul>
