--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,7 @@
 <p>
   Here are list of teams registered for the 2015 Grand Prix.
 </p>
+<p>If want to register your team here, please logon!!</p>
 
 <div class="booking-status">
   <%= form_tag('/', method: :get) do %>
