--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -14,7 +14,7 @@
     <td><strong>Constructor</strong></td> <td><%= @team.constructor.titleize %></td>
   </tr>
   <tr><td><strong>Name</strong></td> <td><%= @team.name.titleize %></td></tr>
-  <tr><td><strong>Podiums</strong></td> <td><%= @team.podiums.titleize %></td></tr>
+  <tr><td><strong>Podiums</strong></td> <td><%= @team.podiums %></td></tr>
   <tr><td><strong>Driver1</strong></td> <td><%= @team.driver1.titleize %></td></tr>
   <tr><td><strong>Driver2</strong></td> <td><%= @team.driver2.titleize %></td></tr>
   <tr><td><strong>Titles</strong></td> <td><%= @team.titles %></td></tr>
