minor alignment changes

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,7 +34,7 @@
   <tbody>
   <% if @teams.empty? %>
       <tr>
-        <td colspan="9">There's no records to display, to create a new team click the link below!</td>
+        <td colspan="9" style="text-align: center;">There's no teams registered, do u want to register your teams please logon!!</td>
       </tr>
   <% else %>
       <% @teams.each do |team| %>
