--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -31,7 +31,7 @@
   <tbody>
   <% if @teams.empty? %>
       <tr>
-        <td colspan="9">There's no records to display, to create a new team click the link below!</td>
+        <td colspan="9" style="text-align: center;">There's no records to display, to create a new team click the link below!</td>
       </tr>
   <% else %>
       <% @teams.each do |team| %>
