--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 <body>
 <div class="header">
   <div class="center">
-    <h1><a href="/"><img src="<%= image_path('logo.png') %>" alt="LOL"></a></h1>
+    <h1><a href=" <%= user_signed_in? ? teams_path : root_path  %>"><img src="<%= image_path('logo.png') %>" alt="LOL"></a></h1>
     <div class="right-top-nav">
       <% if !user_signed_in? %>
           <%= link_to "Sign Up", new_registration_path(User.new) %> |
